syntax = "proto3";

option java_multiple_files = true;
package com.atb.grpc.ninja.blockchain;

message Block {
  string data = 1;
  string hash = 2;
  string link_hash = 3;
}

message BlockConfirm {
  string message = 1;
}

service BlockChainService {
  rpc addBlock (Block) returns (BlockConfirm);
}


